add_library(connection connection.cpp connection.hpp)
add_library(connection_manager connection_manager.cpp connection_manager.hpp)
add_library(mime_types mime_types.cpp mime_types.hpp)
add_library(reply reply.cpp reply.hpp)
add_library(request_handler request_handler.cpp request_handler.hpp)
add_library(request_parser request_parser.cpp request_parser.hpp)
add_library(server server.cpp server.hpp)
